--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
         <h1>My Resume</h1>
     </header>
     <section>
-        <h2>David Oisakwe</h2>
+        <h2>David Orisakwe</h2>
         <p>https://docs.google.com/document/d/1TW1FciAoocfJXQ8VJn4M8VxsKxNabJ3B/edit?usp=sharing&ouid=111911150548201684877&rtpof=true&sd=true</p>
     </section>
 </body>
