--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <h1>David Orisakwe</h1>
         <p>Welcome to my portfolio</p>
     </header>
+     <section class="profile">
+        <img src="profile.jpg" alt="David">
     <section class="about">
         <h2>About Me</h2>
         <p>I am a freshman computer science major at Grambling State University.</p>
